--- a/Flickr Client App/Screens/PhotoDetail/View/PhotoDetail.storyboard
+++ b/Flickr Client App/Screens/PhotoDetail/View/PhotoDetail.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b8A-Je-qQw">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b8A-Je-qQw">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="560"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="560" id="rnm-Hq-4VW"/>
