--- a/Flickr Client App/Screens/RecentPhotos/View/Base.lproj/Main.storyboard
+++ b/Flickr Client App/Screens/RecentPhotos/View/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W8o-kb-zHa">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W8o-kb-zHa">
                                             <rect key="frame" x="0.0" y="67" width="414" height="300"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="300" id="SW3-jA-ci0"/>
